# libsimdpp_cmake_mwe

./: CMakeLists.txt  README.md  main.cpp  test.cpp  test.h
